--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,8 @@
     "dotenv": "^16.0.1",
     "errorhandler": "^1.5.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.0",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
